# dashcopy

./: .gitignore  README.md  configure.ac
src/: Makefile.am  dashcopy.c  dashsrc.c  dashsrc.h  http.c  http.h  log.c  log.h  main.c  mpdparser.c  mpdparser.h  testhttp.c  util.c  util.h
